MPfm 0.6.0.0 - Added new properties to the Gradient class. - Added the TextGradient class.
Related to issue #326.


git-svn-id: http://hamster-svn/svn/repos/base@367 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Misc\Control.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Misc\TextGradient.cs" />
     <Compile Include="Misc\HScrollBar.cs">
       <SubType>Component</SubType>
     </Compile>
