--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Misc\Control.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Misc\Gradient.cs" />
     <Compile Include="Misc\HScrollBar.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -129,6 +130,7 @@
     <Compile Include="Audio\OutputMeter.Designer.cs">
       <DependentUpon>OutputMeter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Misc\TextGradient.cs" />
     <Compile Include="Panel-Forms\Form.cs">
       <SubType>Form</SubType>
     </Compile>
