MPfm 0.6.0.0 - MPfm.Core: Added the OS class from the Test repository. - MPfm.UI: Added the MainWindowController and PlayerPositionEntity classes from the Test repository.
Related to issue #324.

git-svn-id: http://hamster-svn/svn/repos/base@385 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Core/MPfm.Core.csproj
+++ b/MPfm/branches/current/MPfm.Core/MPfm.Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ImageManipulation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
+    <Compile Include="OS.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
