MPfm 0.6.0.0 - MPfm.GTK: Re-added the MainWindow class from the Test repository. The UI hasn't been updated.
Related to issue #324.

git-svn-id: http://hamster-svn/svn/repos/base@386 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -86,5 +86,12 @@
       <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
       <Name>MPfm.Sound</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MPfm.UI\MPfm.UI.csproj">
+      <Project>{3531AB3A-4E55-40F0-8E4D-C9E5EA697509}</Project>
+      <Name>MPfm.UI</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon48.png" />
   </ItemGroup>
 </Project>
