MPfm 0.6.0.0 - Player: Added code for loading the BASS plugins under Linux. - BASS.NET wrapper: Added the GetVersion methods for the BASS, FX and MIX libraries in the Base class. - Added the missing Bass.Net.dll.config to the project. - The GTK# client now works just like in the Test repository. The Test GTK# project can now be deleted from the Test repository.
Related to issue #303 and issue #308.

git-svn-id: http://hamster-svn/svn/repos/base@389 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{2273DAAF-55C6-4422-BD3D-2DCDEA09DBCC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>MPfm.GTK</RootNamespace>
-    <AssemblyName>MPfm.GTK</AssemblyName>
+    <AssemblyName>MPfm</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -119,6 +119,7 @@
     <None Include="Lib\x86\libbass_mpc.so" />
     <None Include="Lib\x86\libbass_tta.so" />
     <None Include="Lib\x86\libbasswv.so" />
+    <None Include="Bass.Net.dll.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
