MPfm 0.6.0.0 GTK# client: - Added the Playlist, Settings and Effects window. They are empty for now. Using any of these buttons in the main window now works. - Added missing namespace in MainWindow.
Related to issue #308.

git-svn-id: http://hamster-svn/svn/repos/base@390 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -64,9 +64,15 @@
   <ItemGroup>
     <Compile Include="gtk-gui\generated.cs" />
     <Compile Include="MainWindow.cs" />
-    <Compile Include="gtk-gui\MainWindow.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="SettingsWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.SettingsWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.MainWindow.cs" />
+    <Compile Include="PlaylistWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.PlaylistWindow.cs" />
+    <Compile Include="EffectsWindow.cs" />
+    <Compile Include="gtk-gui\MPfm.GTK.EffectsWindow.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
