--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -75,6 +75,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audio\FaderTheme.cs" />
     <Compile Include="Audio\WaveFormDisplayTheme.cs" />
     <Compile Include="Audio\OutputMeterTheme.cs" />
     <Compile Include="Audio\WaveFormDisplay.cs">
@@ -159,7 +160,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Audio\VolumeFader.cs">
+    <Compile Include="Audio\Fader.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Audio\WaveForm.cs">
