MPfm 0.6.0.0 - Button: Moved all theme properties into ButtonTheme. - Added the ButtonTheme class.
Related to issue #327.


git-svn-id: http://hamster-svn/svn/repos/base@393 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Audio\WaveFormDisplay.Designer.cs">
       <DependentUpon>WaveFormDisplay.cs</DependentUpon>
     </Compile>
+    <Compile Include="Buttons-Toolbars\ButtonTheme.cs" />
     <Compile Include="Buttons-Toolbars\TrackBar.cs">
       <SubType>Component</SubType>
     </Compile>
