MPfm 0.6.0.0 - LinkLabel: Added the LinkLabelTheme class. Replaced most properties by TextGradient.
Related to issue #326 and issue #327.


git-svn-id: http://hamster-svn/svn/repos/base@395 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Fonts\EmbeddedFontCollection.cs" />
     <Compile Include="Fonts\EmbeddedFontHelper.cs" />
     <Compile Include="Fonts\CustomFontEditor.cs" />
+    <Compile Include="Labels\LinkLabelTheme.cs" />
     <Compile Include="Labels\LabelTheme.cs" />
     <Compile Include="Library\SongGridViewTheme.cs" />
     <Compile Include="Library\SongGridViewMode.cs" />
