--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -116,12 +116,12 @@
       <DependentUpon>SongGridView.cs</DependentUpon>
     </Compile>
     <Compile Include="Library\SongGridViewImageCache.cs" />
-    <Compile Include="Misc\Control.cs">
+    <Compile Include="Control.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Misc\BackgroundGradient.cs" />
     <Compile Include="Misc\Gradient.cs" />
-    <Compile Include="Misc\HScrollBar.cs">
+    <Compile Include="ScrollBar\HScrollBar.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Lists\ListBox.cs">
@@ -133,6 +133,7 @@
     <Compile Include="Audio\OutputMeter.Designer.cs">
       <DependentUpon>OutputMeter.cs</DependentUpon>
     </Compile>
+    <Compile Include="ScrollBar\ScrollBarTheme.cs" />
     <Compile Include="Misc\TextGradient.cs" />
     <Compile Include="Panel-Forms\Form.cs">
       <SubType>Form</SubType>
