MPfm 0.6.0.0 - Added the TrackBarTheme class to TrackBar. - Started setting label theme properties.
Related to issue #327.


git-svn-id: http://hamster-svn/svn/repos/base@397 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -85,6 +85,7 @@
       <DependentUpon>WaveFormDisplay.cs</DependentUpon>
     </Compile>
     <Compile Include="Buttons-Toolbars\ButtonTheme.cs" />
+    <Compile Include="Buttons-Toolbars\TrackBarTheme.cs" />
     <Compile Include="Buttons-Toolbars\TrackBar.cs">
       <SubType>Component</SubType>
     </Compile>
