MPfm 0.6.0.0 - Added the PanelTheme class.
Related to issue #327.


git-svn-id: http://hamster-svn/svn/repos/base@401 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -122,6 +122,7 @@
     </Compile>
     <Compile Include="Misc\BackgroundGradient.cs" />
     <Compile Include="Misc\Gradient.cs" />
+    <Compile Include="Panel-Forms\PanelTheme.cs" />
     <Compile Include="ScrollBar\HScrollBar.cs">
       <SubType>Component</SubType>
     </Compile>
