MPfm 0.6.0.0 (Linux) - GTK#: Finished adding actions for toolbar.
Related to issue #308.

git-svn-id: http://hamster-svn/svn/repos/base@411 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{2273DAAF-55C6-4422-BD3D-2DCDEA09DBCC}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>MPfm.GTK</RootNamespace>
-    <AssemblyName>MPfm</AssemblyName>
+    <AssemblyName>mpfm</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
