--- a/MPfm/branches/current/MPfm.Mac/Info.plist
+++ b/MPfm/branches/current/MPfm.Mac/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.MPfm.Mac</string>
+	<string>org.mp4m.mac</string>
 	<key>CFBundleName</key>
-	<string>MPfm.Mac</string>
+	<string>MPfm: Music Player for Musicians</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
