MPfm 0.6.0.0 * MPfm.GTK   - More work into the GUI.   - The Bass.Net.dll.config and icon48.png are now automatically copied to the output directory.
Related to issue #308.


git-svn-id: http://hamster-svn/svn/repos/base@433 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/Bass.Net.dll.config
+++ b/MPfm/branches/current/MPfm.GTK/Bass.Net.dll.config
@@ -2,5 +2,5 @@
 <configuration>
 	<dllmap dll="bass.dll" target="libbass.so"/>
 	<dllmap dll="bass_fx.dll" target="libbass_fx.so"/>
-	<dllmap dll="bassflac.dll" target="libbassflac.so"/>
+	<dllmap dll="bassmix.dll" target="libbassmix.so"/>
 </configuration>
