MPfm 0.6.0.0 * Panel (Windows Controls)   - Fixed header background gradient position issue. * TableLayoutPanel (Windows Controls)   - Added control and TableLayoutPanelTheme object. * Label and PaintHelper (Windows Controls)   - Fixed issues with centering and autosizing (not done yet).
Related to issue #332 and issue #334.


git-svn-id: http://hamster-svn/svn/repos/base@450 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
+++ b/MPfm/branches/current/MPfm.WindowsControls/MPfm.WindowsControls.csproj
@@ -89,6 +89,10 @@
     <Compile Include="Buttons-Toolbars\TrackBar.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Containers\TableLayoutPanelTheme.cs" />
+    <Compile Include="Containers\TableLayoutPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Containers\FlowLayoutPanel.cs">
       <SubType>Component</SubType>
     </Compile>
