MPfm 0.6.0.0 * Sound   - Added ASIO methods in Base class.   - Added the ASIOInfo data structure. * Settings Window (WinForms)   - Added ASIO panel in Audio Settings tab.     Some code for detecting the ASIO device information has been added, but it won't make it     for this release because of problems initializing ASIO devices while playing songs.
Related to issue #320.


git-svn-id: http://hamster-svn/svn/repos/base@466 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/branches/current/MPfm.Sound/MPfm.Sound.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -66,6 +66,7 @@
     <Compile Include="AudioFiles\AudioFileFormatExtensions.cs" />
     <Compile Include="Bass.Net\Channel.cs" />
     <Compile Include="Bass.Net\ChannelType.cs" />
+    <Compile Include="Bass.Net\ASIOInfo.cs" />
     <Compile Include="Bass.Net\MixerChannel.cs" />
     <Compile Include="Bass.Net\DriverType.cs" />
     <Compile Include="Bass.Net\TestDevice.cs" />
