--- a/MPfm/branches/current/MPfm.Core/MPfm.Core.csproj
+++ b/MPfm/branches/current/MPfm.Core/MPfm.Core.csproj
@@ -70,12 +70,14 @@
     <Compile Include="ColorManipulation.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Conversion.cs" />
-    <Compile Include="DatabaseFieldNameAttribute.cs" />
+    <Compile Include="Attributes\DatabaseFieldAttribute.cs" />
+    <Compile Include="Extensions\DictionaryExtension.cs" />
     <Compile Include="XMLHelper.cs" />
     <Compile Include="ImageManipulation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tracing.cs" />
     <Compile Include="OS.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
