--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -111,9 +111,9 @@
       <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
       <Name>MPfm.Sound</Name>
     </ProjectReference>
-    <ProjectReference Include="..\MPfm.UI\MPfm.UI.csproj">
-      <Project>{3531AB3A-4E55-40F0-8E4D-C9E5EA697509}</Project>
-      <Name>MPfm.UI</Name>
+    <ProjectReference Include="..\MPfm.MVP\MPfm.MVP.csproj">
+      <Project>{B6B0613C-FF39-479D-9EF0-31DAF9684A06}</Project>
+      <Name>MPfm.MVP</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
