--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -356,6 +356,10 @@
       <Project>{2A62D229-D7FC-41DA-B676-BB1371659BFB}</Project>
       <Name>MPfm.Library</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MPfm.MVP\MPfm.MVP.csproj">
+      <Project>{B6B0613C-FF39-479D-9EF0-31DAF9684A06}</Project>
+      <Name>MPfm.MVP</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MPfm.Player\MPfm.Player.csproj">
       <Project>{FEB7497C-784C-4380-874F-46FD93C82BA1}</Project>
       <Name>MPfm.Player</Name>
@@ -363,10 +367,6 @@
     <ProjectReference Include="..\MPfm.Sound\MPfm.Sound.csproj">
       <Project>{D92F718E-9A24-4B8B-9E40-77F93CF89EAE}</Project>
       <Name>MPfm.Sound</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MPfm.UI\MPfm.UI.csproj">
-      <Project>{3531AB3A-4E55-40F0-8E4D-C9E5EA697509}</Project>
-      <Name>MPfm.UI</Name>
     </ProjectReference>
     <ProjectReference Include="..\MPfm.WindowsControls\MPfm.WindowsControls.csproj">
       <Project>{11C9F839-A47E-455E-8D10-661E47DE664C}</Project>
