MPfm 0.6.0.1 * MVP   - Added IUpdateLibraryPresenter and UpdateLibraryPresenter.   - IMainPresenter/MainPresenter: Implemented most playback methods. * GTK   - Updated IMainView implementation.
Related to issue #324, issue #360 and issue #364.

git-svn-id: http://hamster-svn/svn/repos/base@488 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -51,10 +51,12 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Views\IMainView.cs" />
-    <Compile Include="Services\IMainView.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Presenters\UpdateLibraryPresenter.cs" />
     <Compile Include="Models\PlayerPositionEntity.cs" />
+    <Compile Include="Services\IMainService.cs" />
+    <Compile Include="Presenters\IMainPresenter.cs" />
+    <Compile Include="Views\IUpdateLibraryView.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
