MPfm 0.6.0.1 * MVP   - MainPresenter: Added RefreshSongInformation method   - Added SongInformationEntity.   - IMainView: Now using SongInformationEntity for the RefreshSongInformation method. * GTK   - Updated IMainView implementation.
Related to issue #324, issue #360 and issue #364.

git-svn-id: http://hamster-svn/svn/repos/base@489 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Services\IMainService.cs" />
     <Compile Include="Presenters\IMainPresenter.cs" />
     <Compile Include="Views\IUpdateLibraryView.cs" />
+    <Compile Include="Models\SongInformationEntity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
