MPfm 0.6.0.1 * MVP   - Added Ninject to the project. Not used yet though. * GTK   - Added Ninject to the project. Not used yet though.
Related to issue #356.

git-svn-id: http://hamster-svn/svn/repos/base@491 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/branches/current/MPfm.GTK/MPfm.GTK.csproj
@@ -72,6 +72,9 @@
       <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="Mono.Posix" />
+    <Reference Include="Ninject">
+      <HintPath>Lib\Ninject.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
@@ -146,6 +149,7 @@
     <None Include="Bass.Net.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="Lib\Ninject.dll" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
