MPfm 0.6.0.1 * MVP   - Added AutoMapper.   - Added UpdateLibraryEntity.   - MainPresenter: Added AddFilesToLibrary and AddFolderToLibrary methods.   - IUpdateLibraryView: Updated RefreshStatus method. * GTK   - UpdateLibraryWindow now implementing IUpdateLibraryView.
Related to issue #359 and issue #365.

git-svn-id: http://hamster-svn/svn/repos/base@494 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -50,6 +50,9 @@
     <Reference Include="Ninject">
       <HintPath>Lib\Ninject.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper">
+      <HintPath>Lib\AutoMapper.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
@@ -61,6 +64,7 @@
     <Compile Include="Presenters\IMainPresenter.cs" />
     <Compile Include="Views\IUpdateLibraryView.cs" />
     <Compile Include="Models\SongInformationEntity.cs" />
+    <Compile Include="Models\UpdateLibraryEntity.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -90,5 +94,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Lib\Ninject.dll" />
+    <None Include="Lib\AutoMapper.dll" />
   </ItemGroup>
 </Project>
