MPfm 0.6.0.1 * Library   - Added interfaces for the Library and MPfmGateway classes.   - Deleted the prototype UpdateLibrary code.
Related to issue #355.


git-svn-id: http://hamster-svn/svn/repos/base@495 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/branches/current/MPfm.Library/MPfm.Library.csproj
@@ -80,16 +80,13 @@
     <Reference Include="Mono.Data.Sqlite" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gateway\IMPfmGateway.cs" />
     <Compile Include="Gateway\ISQLiteGateway.cs" />
     <Compile Include="Gateway\MPfmGateway.cs" />
+    <Compile Include="ILibrary.cs" />
     <Compile Include="Objects\PlaylistFile.cs" />
     <Compile Include="Objects\History.cs" />
     <Compile Include="Objects\Setting.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryStep.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryDoneData.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryProgressData.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibraryException.cs" />
-    <Compile Include="UpdateLibrary\UpdateLibrary.cs" />
     <Compile Include="Gateway\SQLiteGateway.cs" />
     <Compile Include="Objects\Folder.cs" />
     <Compile Include="Library.cs" />
