--- a/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm/branches/current/MPfm.Player/MPfm.Player.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Events\PlayerStreamCallbackData.cs" />
     <Compile Include="Exceptions\PlayerCreateStreamException.cs" />
+    <Compile Include="IPlayer.cs" />
     <Compile Include="Objects\PlayerSyncProc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\RepeatType.cs" />
