MPfm 0.6.0.1 * Sound   - Added interfaces for the Channel, MixerChannel and TestDevice classes. * WinForms   - Added interface for the MPfmConfiguration class.
Related to issue #355.


git-svn-id: http://hamster-svn/svn/repos/base@497 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm/MPfm.csproj
+++ b/MPfm/branches/current/MPfm/MPfm.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Configuration\Controls\ControlsSongGridViewQueryConfigurationSection.cs" />
     <Compile Include="Configuration\General\GeneralConfigurationKeyValue.cs" />
     <Compile Include="Configuration\General\GeneralConfigurationSection.cs" />
+    <Compile Include="Configuration\IMPfmConfiguration.cs" />
     <Compile Include="Configuration\MPfmConfiguration.cs" />
     <Compile Include="Configuration\Windows\WindowConfiguration.cs" />
     <Compile Include="Configuration\Windows\WindowsConfigurationSection.cs" />
