MPfm 0.6.0.1 * Library   - Added the ILibraryService/LibraryService and IUpdateLibraryService/UpdateLibraryService services. * MVP   - Updated the UpdateLibraryPresenter with the UpdateLibraryService.
Related to issue #366 and issue #367.

git-svn-id: http://hamster-svn/svn/repos/base@498 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Views\IUpdateLibraryView.cs" />
     <Compile Include="Models\SongInformationEntity.cs" />
     <Compile Include="Models\UpdateLibraryEntity.cs" />
+    <Compile Include="Presenters\IUpdateLibraryPresenter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
